# businesslogic

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  buddy.yml  package-lock.json  package.json  postcss.config.js  tsconfig.json  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.claude/: settings.json
.claude/commands/: bizdev-strategy.md  browser-qa.md  compare-legacy.md  cto-review.md  db-admin.md  dev-up.md  devops-review.md  frontend-designer.md  migrate-iteration.md  project-review.md  ralph-improvement.md  robo-sprint.md  robo-task.md  tasks.md  test-all.md
.claude/hooks/: post-commit-task-eval.sh  post-edit-lint.sh  pre-commit-docs-check.sh  pre-commit-schema-check.sh  pre-commit-tests.sh  protect-branches.sh  session-start.sh
docs/: ai-assistant.md  architecture-diagram.html  architecture-diagram.mermaid  architecture-review-2026-03-20.docx  cedar-guardrails-design.md  database-strategy.md  evolution-plan.md  migration-safety.md  platform-evolution-plan-2026-03-20.docx  service-auth.md
docs/api/: README.md
docs/architecture/: pricing-v2.md  usage-events.md
docs/improvements/: README.md
docs/migrations/: iteration-00-foundation.md  iteration-01-ai-api.md  iteration-02-gateway.md  iteration-03-public-api.md  iteration-04-flow-ai.md  iteration-05-hardening.md
docs/operations/: stripe-production-setup.md
docs/pricing/: Businesslogic API Pricing.v1-backup.xlsx  Businesslogic API Pricing.xlsx  businesslogic-api-pricing.md
docs/reports/: bizdev-strategy-2026-03-24.md  bizdev-strategy-2026-04-07.md  bizdev-strategy-2026-04-17-pricing.md  browser-qa-2026-03-25-retest.md  browser-qa-2026-03-25.md  browser-qa-2026-03-31-design-fix.md  browser-qa-2026-03-31-layout-builder.md  browser-qa-2026-03-31-preview-toggle.md  browser-qa-2026-03-31-widget-demos.md  browser-qa-2026-03-31-widget-fix.md  browser-qa-2026-03-31.md  browser-qa-2026-04-01-feature-flags.md  browser-qa-2026-04-01-feature-gates.md  browser-qa-2026-04-01-ff-retest.md  browser-qa-2026-04-07-api-key-extraction.md  browser-qa-2026-04-07-calc-test.md  browser-qa-2026-04-07-formula-ux-retest.md  browser-qa-2026-04-07-formula-ux-retest2.md  browser-qa-2026-04-07-formula-ux.md  browser-qa-2026-04-07-formulas-key-bar.md  browser-qa-2026-04-07-gateway-keys-retest.md  browser-qa-2026-04-07-gateway-keys.md  browser-qa-2026-04-07-integration.md  browser-qa-2026-04-07-kb-scoping.md  browser-qa-2026-04-07-key-encryption.md  browser-qa-2026-04-07-masking-fix.md  browser-qa-2026-04-09-extensions.md  browser-qa-2026-04-17.md  browser-qa-2026-04-19-sprint-b-cms-36-37.md  browser-qa-2026-04-20-task47-plan-cards-live-render.md  browser-qa-2026-04-20-tasks-48-50-51-52-summary.md  browser-qa-module-account-2026-03-25.md  browser-qa-module-admin-dashboard-2026-03-25.md  browser-qa-module-ai-assistant-2026-03-25.md  browser-qa-module-calculators-2026-03-25.md  browser-qa-module-flows-2026-03-25.md  browser-qa-module-formulas-2026-03-25.md  browser-qa-module-knowledge-2026-03-25.md  browser-qa-retest-2026-03-25.md  cto-review-2026-03-23.md  (+35 more)
docs/strategy/: competitive-analysis.md  contextual-widgets.md  critical-pmf-review.md  gtm.md  guardrails-digital-twin-analysis.md  market-landscape.md  opportunities.md  (+3 more)
lib/: Businesslogic.js  index.d.ts
scripts/: _directus-common.sh  add-missing-relations.sh  add-user-read-permissions.sh  db-baseline.sh  db-structure-cleanup.sh  expand-api-keys-whitelist.sh  health-check.sh  migrate.sh  polish-orphan-field-metadata.sh  prune-db-artifacts.sh  register-orphan-fields.sh  remove-composite-pk-collections.sh  test-all.sh  test-contracts.sh  test-migrate.sh  validate-schema.sh
services/flow/: .env.example  .gitignore  Cargo.toml  INDEX.md  KEY_INSIGHTS.txt  README.md  RESEARCH_SUMMARY.md  TECHNICAL_REPORT.md
services/flow/crates/flow-common/: Cargo.toml
services/flow/crates/flow-common/src/: context.rs  error.rs  flow.rs  lib.rs  message.rs  node.rs  trigger.rs  usage_events.rs
services/flow/crates/flow-common/tests/: envelope_shape.rs
services/flow/crates/flow-engine/: Cargo.toml
services/flow/crates/flow-engine/src/: lib.rs  validation.rs
services/flow/crates/flow-engine/src/dag/: mod.rs
services/flow/crates/flow-engine/src/executor/: mod.rs
services/flow/crates/flow-engine/src/nodes/: aggregate.rs  condition.rs  database.rs  delay.rs  expression.rs  formula.rs  http_request.rs  loop_node.rs  mod.rs  noop.rs  redis_node.rs  script.rs  transform.rs
services/flow/crates/flow-engine/src/nodes/ai/: budget.rs  embedding.rs  llm.rs  mod.rs  provider.rs  vector_search.rs
services/flow/crates/flow-engine/src/nodes/ai/kb/: chunk_text.rs  filter_unchanged.rs  merge_rrf.rs  mod.rs  parse_document.rs  store_vectors.rs  text_search.rs  update_status.rs
services/flow/crates/flow-engine/src/plugins/: host_functions.rs  mod.rs
services/flow/crates/flow-engine/src/state/: mod.rs
services/flow/crates/flow-engine/tests/fixtures/: echo_plugin.wasm  echo_plugin.wat
services/flow/crates/flow-trigger/: Cargo.toml
services/flow/crates/flow-trigger/src/: main.rs  rate_limit.rs
services/flow/crates/flow-worker/: Cargo.toml
services/flow/crates/flow-worker/src/: main.rs
services/flow/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml
services/flow/docs/: ai-features.md  architecture.md  creating-nodes.md  data-model.md  decisions.md  directus-integration.md  execution-engine.md  flow-engine-architecture.html  formula-integration.md  infrastructure.md  nodes.md  roadmap.md  security.md  triggers.md
services/flow/flows/: composite-rag.json  kb-answer.json  kb-ingest.json  kb-search.json  tool-execute.json
services/flow/migrations/: 001_init.sql  002_knowledge_ai.sql  003_db_event_notify.sql  003_kb_embedding_flex.sql  004_access_control.sql
src/: WebForm.ts  app.ts  http.ts  index.html  index.ts  interfaces.ts  localtest.html  main.scss  types.ts  utils.ts  web-service.ts
themes/: businesslogic-elegant-theme.scss  businesslogic-standard-theme.scss
wiki/: README.md  styling-guide.md  templating-guide.md  use-cases.md
(+1137 files in other folders)
