[workspace]
resolver = "2"
members = [
    "crates/flow-common",
    "crates/flow-engine",
    "crates/flow-trigger",
    "crates/flow-worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/coignite/businesslogic-flow"

[workspace.dependencies]
# Shared across crates
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "streams", "connection-manager"] }
deadpool-redis = "0.18"

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# HTTP
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"] }
url = "2"

# Serialization
rmp-serde = "1"

# DAG
petgraph = "0.7"

# Cron
cron = "0.13"

# WASM (feature-gated)
wasmtime = "28"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
lru = "0.12"

# Async utilities
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"

# Embedded JS (Phase 2)
rquickjs = { version = "0.8", features = ["bindgen", "loader", "allocator"] }

# Observability
opentelemetry = "0.27"
tracing-opentelemetry = "0.28"

# Excel formula engine
businesslogic-excel = { git = "https://github.com/Coignite-ApS/businesslogic-excel", tag = "v1.0.3", default-features = false }

# AI / Vector (Phase 3)
pgvector = { version = "0.4", features = ["sqlx"] }
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }

# Internal crates
flow-common = { path = "crates/flow-common" }
flow-engine = { path = "crates/flow-engine" }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
