[package]
name = "flow-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and messages for the BusinessLogic flow engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rmp-serde = { workspace = true }
tokio-util = { workspace = true }
