[package]
name = "flow-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Execution worker for BusinessLogic flows"

[[bin]]
name = "flow-worker"
path = "src/main.rs"

[features]
ai-nodes = ["flow-engine/ai-nodes"]

[dependencies]
flow-common = { workspace = true }
flow-engine = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# IDs & time
uuid = { workspace = true }
chrono = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }
deadpool-redis = { workspace = true }

# Logging / Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Errors
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
